@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.3 2018/08/30 12:36:31 wen Exp $
+# $NetBSD: Makefile,v 1.4 2019/07/31 20:37:45 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://xtable.r-forge.r-project.org/
-COMMENT=	Export Tables to LaTeX or HTML
-LICENSE=	gnu-gpl-v2
+COMMENT=	Export tables to LaTeX or HTML
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	xtable
-R_PKGVER=	1.8-3
+R_PKGVER=	1.8-4
 
 USE_LANGUAGES=	# none
 
-BUILDLINK_API_DEPENDS.R+=	R>=2.10.0
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
