@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3200 2019/07/31 20:35:18 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3201 2019/07/31 20:37:45 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5157,3 +5157,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-splancs to 2.01.40 [brook 2019-07-31]
 	Updated math/R-statmod to 1.4.32 [brook 2019-07-31]
 	Updated math/R-tibble to 2.1.3 [brook 2019-07-31]
+	Updated math/R-xtable to 1.8.4 [brook 2019-07-31]
